--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  <meta http-equiv="X-UA-Compatible" content="ie=edge">
  <!-- bootstrap css cdn -->
  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+ <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
  <!-- main css -->
  <link rel="stylesheet" href="css/main.css">
  <!-- google fonts -->
